2006-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/jst/Bus.java: (Bus.peek):
	* src/com/fluendo/jst/Pipeline.java: (Pipeline.SortedEnumerator),
	(Pipeline.SortedEnumerator.queueNextElement):
	* src/com/fluendo/player/Status.java:
	* src/com/fluendo/plugin/Queue.java: (Queue.Pad):
	  Fix Vector calls to work with 1.1 API - partially fixes applet
	  in Explorer

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader.stop):
	Print some errors when unimplemented methods are called.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado.paint):
	Don't try to render with bogus width/height values.

2006-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* README:
	* TODO:
	  update
	* build.xml:
	  build non-jikes with correct debug as well

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.useClock),
	(Pipeline.add), (Pipeline), (Pipeline.remove):
	Don't accept null elements in add and remove.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado), (Cortado.init),
	(Cortado.handleMessage):
	Cleanups.
	Pause pipeline while buffering.
	
	* src/com/fluendo/plugin/AudioSink.java:
	(AudioSink.RingBuffer.setSample), (AudioSink.RingBuffer.play),
	(AudioSink.RingBuffer.pause):
	* src/com/fluendo/plugin/AudioSinkJ2.java:
	Compile fixes.

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad):
	Post stream status messages.

	* src/com/fluendo/plugin/Queue.java: (Queue.updateBuffering),
	(Queue.Pad):
	Never pause the stream when we are buffering so that we can
	preroll while buffering.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado.stringToTime),
	(Cortado.handleMessage):
	Update buffering info.

	* src/com/fluendo/player/Status.java: (Status):
	Print buffering nicely.

	* src/com/fluendo/plugin/AudioSink.java: